# coman_robotran

./: .gitignore  README.md
StandaloneC/: CMakeLists.txt  README.md
StandaloneC/src/: CMakeLists.txt
StandaloneC/src/generic/Simbody/: SimbodyBodiesStruct.c  SimbodyBodiesStruct.h  SimbodyStruct.c  SimbodyStruct.h  simbody_cpp_functions.cpp  simbody_cpp_functions.h  simbody_functions.c  simbody_functions.h
StandaloneC/src/generic/integrator/: derivs.c  dopri5.c  dopri5.h  integrator.h  rk4.c
StandaloneC/src/generic/jni/: jni_functions.c  jni_functions.h
StandaloneC/src/generic/main_files/: finish_simulation.c  init_simulation.c  loop_simulation.c  main_simulation.h  model_main.c  model_main.cpp
StandaloneC/src/generic/mbs_load_xml/: freeMBSdata_xml.c  freeUserModel_xml.c  loadMBSdata_xml.c  loadMBSdata_xml.h  loadMBSelements_xml.c  loadMBSheader_xml.h  loadMBSsizes_xml.c  loadMBSutilities_xml.c  loadUserModel_xml.c  mbs_xml_reader.c  mbs_xml_reader.h  mds_translator.c  mds_translator.h  mstr.c  mstr.h  part.c  part.h
StandaloneC/src/generic/post_process/: save_vectors.c  save_vectors.h
StandaloneC/src/generic/real_time/: real_time.c  real_time.h  time_functions.c  visu_past.c  visu_past.h
StandaloneC/src/generic/robotran/: LocalDataStruct.c  LocalDataStruct.h  MBSdataStruct.h  MBSdataStructR7.h  MBSdef.h  MBSfun.h  MBSsensorStruct.c  MBSsensorStruct.h  choldc.c  cholsl.c  lubksb.c  ludcmp.c  lut.c  lut.h  mbs_close_loops.c  mbs_dirdynared.c  mbs_matrix.c  mbs_matrix.h  mbs_tool.c  norm.c  nrutil.c  nrutil.h  sfdef.h  svbksb.c  svdcmp.c
StandaloneC/src/generic/sdl/: plot_sdl.c  plot_sdl.h
StandaloneC/src/generic/useful/: useful_functions.c  useful_functions.h
StandaloneC/src/other/CoMan_versions/Basic_version/Model_standalone_2D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Basic_version/Model_standalone_2D/dataR/: coman_robotran.mbs
StandaloneC/src/other/CoMan_versions/Basic_version/Model_standalone_3D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Basic_version/Model_standalone_3D/dataR/: coman_robotran.mbs
StandaloneC/src/other/CoMan_versions/Basic_version/Symbolic_files/symbolicR/: mbs_dirdyna_coman_robotran.c  mbs_dirdyna_coman_robotran.m  mbs_extforces_coman_robotran.c  mbs_extforces_coman_robotran.m  mbs_gensensor_coman_robotran.c  mbs_gensensor_coman_robotran.m  stderr.txt  (+7 more)
StandaloneC/src/other/CoMan_versions/Compliant_feet/Model_standalone_2D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Compliant_feet/Model_standalone_3D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Compliant_feet/dataR/: coman_robotran.mbs
StandaloneC/src/other/CoMan_versions/Long_arms/Model_standalone_2D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Long_arms/Model_standalone_3D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Long_arms/dataR/: coman_robotran.mbs
StandaloneC/src/other/CoMan_versions/Short_feet/Model_standalone_2D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Short_feet/Model_standalone_3D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/Short_feet/dataR/: coman_robotran.mbs
StandaloneC/src/other/CoMan_versions/SkyWalker/Model_standalone_3D/: Model_standalone.mbsdata
StandaloneC/src/other/CoMan_versions/SkyWalker/dataR/: CoMan_23Dof_V4.mbs  coman_robotran.mbs
StandaloneC/src/other/conf/: FindGSL.cmake  FindJ3D.cmake  FindJNI.cmake  FindLibxml2.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  FindSimbody.cmake  cmake_config.h.in
StandaloneC/src/other/save_vector/: CMakeLists.txt  README.md
StandaloneC/src/other/save_vector/src/: break_gestion_plot_save.c  config_sdl_plot_save.c  configure_screen_sdl_plot_save.c  main.c  plot_save_vectors.h  read_vector.c
StandaloneC/src/other/save_vector/src/conf/: cmake_config.h.in
StandaloneC/src/other/save_vector/vectors/: README
StandaloneC/src/other/user_models/: CMakeLists.txt  Makefile
StandaloneC/src/other/user_models/src/: main.c  main_header.h  print_c_files.c  print_c_files.h
StandaloneC/src/other/varState/: CMakeLists.txt
StandaloneC/src/other/varState/src/: main.c  main_header.h  print_c_files.c  print_c_files.h  print_matlab.c  print_matlab.h  read_ctrl_functions.c  read_ctrl_functions.h  read_simu_functions.c  read_simu_functions.h  useful_functions.c  useful_functions.h
StandaloneC/src/other/varState/synchronize/: CMakeLists.txt  README.md
StandaloneC/src/other/varState/synchronize/conf/: cmake_config.h.in
StandaloneC/src/project/controller_files/: ControllersStruct.c  ControllersStruct.h  arm_pos_ref.c  controller_def.h  controller_functions.c  controller_init.c  controller_loop.c  get_ref.c
StandaloneC/src/project/interface_controller/: controller_inputs.c  controller_interface.c  controller_interface.h  controller_io.h  controller_outputs.c
StandaloneC/src/project/interface_controller/Robotran_controller/: robotran_ctrl_interface.c  robotran_ctrl_interface.h  robotran_ctrl_io.c
StandaloneC/src/project/project_files/: events_config.c  info_project.h  plot_config.c  save_vectors_config.c
StandaloneC/src/project/simulation_files/: GCM.c  controller_inputs.c  controller_outputs.c  impedance_controller.c  init_actuator_model.c  simu_controller_loop.c  simu_def.h  simu_in_out.c  simu_in_out.h  simu_useful_functions.c  simulink_outputs.c  stop_simu.c
StandaloneC/src/project/simulation_files/Simbody/: ContactPropertiesDefinitions.cpp  README.md  SimbodyBodiesDefinitions.h
StandaloneC/src/project/simulation_files/Simbody/mesh_obj/: README
StandaloneC/src/project/user_files/: UserModelStruct.c  UserModelStruct.h  userDef.h  user_Derivative.c  user_DrivenJoints.c  user_ExtForces.c  user_JointForces.c  user_Link3Dforces.c  user_Linkforces.c  user_Part.c  user_all_id.h  user_compute_output.c  user_cons_hJ.c  user_cons_jdqd.c  user_finalization.c  user_initialization.c  user_sf_IO.c  user_sf_IO.h
StandaloneC/src/project/varState/: control_variables.txt  simu_variables.txt
StandaloneC/src/project/varState/update_check/: README.txt
(+122 files in other folders)
